--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
                     <h2 class="section-title">Наша команда</h2>
                     <ul class="team-list">
                         <li class="item card">
-                            <img src="./images/team1.jpg" alt="Тим1" width="270"/>
+                            <img src="./images/team1@1x.jpg" alt="Тим1"/>
                             <div class="card-team">
                                 <h3 class="team-title">John Smith</h3>
                                 <p class="team-title position">Product Designer</p>
@@ -170,7 +170,7 @@
                         </li>
 
                         <li class="item card">
-                            <img src="./images/team2.jpg" alt="Тим2" width="270"/>
+                            <img src="./images/team2@1x.jpg" alt="Тим2"/>
                             <div class="card-team">
                                 <h3 class="team-title">Marta Stewart</h3>
                                 <p class="team-title position">Frontend Developer</p>
@@ -206,7 +206,7 @@
                         </li>
 
                         <li class="item card">
-                            <img src="./images/team3.jpg" alt="Тим3" width="270"/>
+                            <img src="./images/team3@1x.jpg" alt="Тим3"/>
                             <div class="card-team">
                                 <h3 class="team-title">Robert Jakis</h3>
                                 <p class="team-title position">Marketing</p>
@@ -242,7 +242,7 @@
                         </li>
 
                         <li class="item card">
-                            <img src="./images/team4.jpg" alt="Тим4" width="270" height="260"/>
+                            <img src="./images/team4@1x.jpg" alt="Тим4"/>
                             <div class="card-team">
                                 <h3 class="team-title">Martin Doe</h3>
                                 <p class="team-title position">UI Designer</p>
