--- a/index.html
+++ b/index.html
@@ -14,6 +14,15 @@
             <div class="logotype">
                 <a href="./" class="logo">Web<span class="logo-top">Studio</span> </a>
             </div>
+            <button type="button" class="menu-button" 
+            aria-expanded="false"
+            aria-controls="menu"
+            data-menu-button>
+            <svg width="24" height="24" aria-label="Переключатель мобильного меню">
+              <use class="icon-cross" href="./images/sprite.svg#icon-close"></use>
+              <use class="icon-menu" href="./images/sprite.svg#icon-menu"></use>
+            </svg>
+          </button>
             <div class="menu is-hidden">
                 <ul class="site-nav">   
                     <li class="item"><a href="#" class="link current">Студия</a></li>
