--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
             aria-expanded="false"
             aria-controls="menu"
             data-menu-button>
-            <svg width="24" height="24" aria-label="Переключатель мобильного меню">
-              <use class="icon-cross" href="./images/sprite.svg#icon-close"></use>
+            <svg width="25" height="17" aria-label="Переключатель мобильного меню">
+              <use class="icon-close" href="./images/sprite.svg#icon-close"></use>
               <use class="icon-menu" href="./images/sprite.svg#icon-menu"></use>
             </svg>
           </button>
