правки в мобильное меню

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             aria-expanded="false"
             aria-controls="menu"
             data-menu-button>
-            <svg width="25" height="17" aria-label="Переключатель мобильного меню">
+            <svg width="25" height="25" aria-label="Переключатель мобильного меню">
               <use class="icon-close" href="./images/sprite.svg#icon-close"></use>
               <use class="icon-menu" href="./images/sprite.svg#icon-menu"></use>
             </svg>
@@ -468,6 +468,7 @@
 
     </footer>
 
+    <script src="./js/menu.js"></script>
     <script src="./js/modal.js"></script>
     
 </body>
