добавляет меню бургер

--- a/index.html
+++ b/index.html
@@ -341,6 +341,16 @@
                     </ul>
                 </div>   
             </section>
+
+                        <!-- Mobile menu -->
+
+                            <div class="backdrop-menu is-hidden" data-modal>
+                                <div class="modal-menu">
+                                <button type="button" data-modal-close>Закрыть</button>
+                                <p> </p>
+                                <p> </p>
+                                </div>
+                            </div>
             
                             <!-- Modal window -->
                             <div class="backdrop is-hidden" data-modal>
