--- a/index.html
+++ b/index.html
@@ -14,13 +14,13 @@
             <div class="logotype">
                 <a href="./" class="logo">Web<span class="logo-top">Studio</span> </a>
             </div>
-            <button type="button" class="menu-button" 
+            <button type="button" class="menu__button" 
             aria-expanded="false"
-            aria-controls="menu"
+            aria-controls="page-header__menu"
             data-menu-button>
-            <svg class="menu-icon" width="25" height="25" aria-label="Переключатель мобильного меню">
-              <use class="icon-close" href="./images/sprite.svg#icon-close"></use>
-              <use class="icon-menu" href="./images/sprite.svg#icon-menu"></use>
+            <svg class="menu__button--icon" width="40" height="40" aria-label="Переключатель мобильного меню">
+              <use class="menu__button--icon-close" href="./images/sprite.svg#icon-close"></use>
+              <use class="menu__button--icon-menu" href="./images/sprite.svg#icon-menu"></use>
             </svg>
           </button>
             <div class="page-header__menu" id="page-header__menu" data-menu>
