вносит правки в шапку

--- a/index.html
+++ b/index.html
@@ -26,13 +26,13 @@
             <div class="page-header__menu" id="page-header__menu" data-menu>
                 <div class="page-header__nav">
                     <ul class="site-nav">   
-                        <li class="item"><a href="#" class="link current">Студия</a></li>
-                        <li class="item"><a href="./portfolio.html" class="link">Портфолио</a></li>
-                        <li class="item"><a href="./contacts.html" class="link">Контакты</a></li>
+                        <li class="site-nav__item"><a href="#" class="site-nav__link current">Студия</a></li>
+                        <li class="site-nav__item"><a href="./portfolio.html" class="site-nav__link">Портфолио</a></li>
+                        <li class="site-nav__item"><a href="./contacts.html" class="site-nav__link">Контакты</a></li>
                     </ul>
                 </div>
                 <div class="page-header__contacts">
-                    <ul class="contact-info">
+                    <ul class="contact-info__list">
                         <li class="contact-info__item">
                             <a href="mailto:info@devstudio.com" aria-label="Электронная почта" class="contact-info__link">
                             <svg class="icon-letter"> 
