--- a/contacts.html
+++ b/contacts.html
@@ -67,19 +67,21 @@
 
     <footer class="page-footer">
 
-        <div class="container footer">
+        <div class="page-footer__container">
+                <div class="page-footer__address">
                     <address class="address">   
                         <div class="logotype footer">
-                            <a href="./" class="logo footer">Web <span class="logo-bottom">Studio</span></a> 
+                            <a href="./" class="logo">Web <span class="logo-bottom">Studio</span></a> 
                         </div>
-                        <p>г. Киев, бул. Леси Украинки, 26</p> 
+                        <p class="address__text">г. Киев, бул. Леси Украинки, 26</p> 
                         <a class="address-link" href="mailto:info@devstudio.com">info@devstudio.com</a> <br>
                         <a class="address-link" href="tel:+380961111111">+38 096 111 11 11</a>
                     </address>
+                </div>
         
-                <section class="net-footer">
+                <div class="net-footer">
                     <b class="join">присоединяйтесь</b>
-                    <ul class="social footer">
+                    <ul class="socials_list footer">
                         <li class="social-item">
                             <a href="#" aria-label="Инстаграм" class="social-link footer"> 
                                 <svg class="social-icon footer">
@@ -106,12 +108,12 @@
                         </li>
 
                     </ul>
-                </section>
+                </div>
               
                 <section class="mailing">
                     <b class="join">подпишитесь на рассылку</b>
-                    <form class="mailing-form">
-                        <input class="mail-input" type="email" placeholder="E-mail" name="e-mail" required="">
+                    <form class="mailing-form" autocomplete="off">
+                        <input class="mail-input" type="email" name="email" placeholder="E-mail" name="e-mail" required="">
                         <button class="btn submit" type="submit">
                             Подписаться 
                             <svg class="submit-icon" width="24" height="24">
